# scooter_rental_system

./: .env  main.py  manage.py  pyproject.toml  requirements.txt  scooter_db2.backup
analytics/: admin.py  models.py  urls.py  views.py
analytics/migrations/: 0001_initial.py
analytics/templatetags/: analytics_extras.py
customers/: admin.py  forms.py  models.py  urls.py  views.py
customers/migrations/: 0001_initial.py
dashboard/: admin.py  models.py  urls.py  views.py
docs/: README.md  Scooter_Rental_Management_System_User_Guide.html  generate_pdf.py  page_descriptions.md  quick_reference.md  screenshot_script.py  user_guide.md
docs/screenshots/: README.md
inventory/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
inventory/migrations/: 0001_initial.py  0002_alter_parts_part_number_alter_parts_unique_together.py  0003_alter_parts_current_stock_alter_parts_reorder_level_and_more.py  0004_scooter_license_number.py  0005_supplier_purchase_purchaseitem_scooter_supplier.py  0006_purchaseitem_store.py  0007_inventoryalert.py
scooterrentals/: asgi.py  settings.py  urls.py  wsgi.py
service/: admin.py  forms.py  models.py  urls.py  views.py
service/migrations/: 0001_initial.py  0002_alter_jobcarditem_quantity.py  0003_jobcard_previous_scooter_status.py
service/templatetags/: service_extras.py
static/css/: icon-colors.css  print-job-card.css  print.css  style.css
static/js/: main.js
staticfiles/css/: mobile.css  style.css
templates/: base.html  login.html  profile.html  settings.html
utils/: export_utils.py  notifications.py
(+40 files in other folders)
