[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2",
    "django-bootstrap4>=25.1",
    "django-crispy-forms>=2.4",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "xlwt>=1.3.0",
]
